--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,12 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.shaubert.dirty"
     android:installLocation="preferExternal"
-    android:versionCode="9"
-    android:versionName="1.3.4" >
+    android:versionCode="10"
+    android:versionName="1.4" >
 
     <uses-sdk
         android:minSdkVersion="7"
-        android:targetSdkVersion="16" />
+        android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -32,6 +32,10 @@
         <activity
             android:name=".PostsPagerActivity"
             android:label="@string/app_name"
+            android:launchMode="singleTop" />
+        <activity
+            android:name=".BlogsListActivity"
+            android:label="@string/blogs_list_activity_label"
             android:launchMode="singleTop" />
         <activity
             android:name=".SettingsActivity"
