--- a/project.properties
+++ b/project.properties
@@ -8,7 +8,7 @@
 # project structure.
 
 # Project target.
-target=android-16
-android.library.reference.1=..\\\\blog-adapter
-android.library.reference.2=..\\\\diego
+target=android-17
+android.library.reference.1=../blog-adapter
+android.library.reference.2=../diego
 android.library.reference.3=../android-network-fundamentals
