--- a/project.properties
+++ b/project.properties
@@ -12,3 +12,4 @@ target=android-17
 android.library.reference.1=../blog-adapter
 android.library.reference.2=../diego
 android.library.reference.3=../android-network-fundamentals
+android.library.reference.4=../Crouton/library
